# energy-efficiency-tracker

./: DOCKER_SETUP.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  routes.py
backend/app/api/middleware/: auth.py
backend/app/api/routes/: __init__.py  health.py
backend/app/api/routes/auth/: auth.py  schemas.py
backend/app/api/routes/efficiency/: efficiency.py  schemas.py
backend/app/api/routes/users/: schemas.py  user.py
backend/app/application/services/: auth_service.py  efficiency_service.py  system_user_service.py  user_service.py
backend/app/domain/entities/: auth.py  efficiency.py  user.py
backend/app/domain/ports/: auth_repository.py  cache_service.py  efficiency_repository.py  password_service.py  token_service.py  user_repository.py
backend/app/infrastructure/: cache.py  config.py  database.py  logging.py
backend/app/infrastructure/repositories/: auth_repository.py  efficiency_repository.py  user_repository.py
backend/app/infrastructure/services/: password_service.py  token_service.py
frontend/: .gitignore  Dockerfile  Dockerfile.dev  auth.config.ts  auth.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  prettier.config.js
frontend/app/: layout.tsx
frontend/components/: app-sidebar.tsx  chart-area-interactive.tsx  login-form.tsx  logout-button.tsx  nav-main.tsx  nav-user.tsx  site-header.tsx
frontend/lib/: action.ts  auth-server.ts  auth-utils.ts
scripts/: dev.sh  prod.sh
(+27 files in other folders)
