[project]
name = "energy-efficiency-tracker-api"
version = "0.1.0"
description = "Energy Efficiency Tracker API"
authors = [
    {name = "Maykol Laguna", email = "lagunamichael2@outlook.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "motor>=3.7.1",
    "redis>=6.4.0",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
lint = [
    "ruff>=0.13.3",
]
